#737: improve connector, seen as SeleniumGrid